--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
 body {
-    background: #F5F5F5 !important;
+    background: white !important;
 }
+
+.parent {
+    padding: 5em;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-column-gap: 16px;
+    grid-row-gap: 16px;
+}
+    
+.div1 { background: whitesmoke;grid-area: 1 / 1 / 4 / 4; }
+.div2 { background: whitesmoke;grid-area: 1 / 4 / 4 / 6; }
+.div3 { background: whitesmoke;grid-area: 4 / 5 / 6 / 6; }
+.div4 { background: whitesmoke;grid-area: 4 / 3 / 6 / 5; }
+.div5 { background: whitesmoke;grid-area: 4 / 1 / 6 / 3; }
