--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,21 @@ body {
     grid-row-gap: 16px;
 }
     
-.div1 { min-height: 15em; background: whitesmoke;grid-area: 1 / 1 / 4 / 4; }
-.div2 { min-height: 15em; background: whitesmoke;grid-area: 1 / 4 / 4 / 6; }
-.div3 { min-height: 15em; background: whitesmoke;grid-area: 4 / 5 / 6 / 6; }
-.div4 { min-height: 15em; background: whitesmoke;grid-area: 4 / 3 / 6 / 5; }
-.div5 { min-height: 15em; background: whitesmoke;grid-area: 4 / 1 / 6 / 3; }
+.div1 { min-height: 15em; max-height: 23em; background: whitesmoke;grid-area: 1 / 1 / 4 / 4; }
+.div2 { min-height: 15em; max-height: 23em; background: whitesmoke;grid-area: 1 / 4 / 4 / 6; }
+.div3 { min-height: 15em; max-height: 23em; background: whitesmoke;grid-area: 4 / 3 / 6 / 6; }
+.div4 { min-height: 15em; max-height: 23em; background: whitesmoke;grid-area: 4 / 1 / 6 / 3; }
+
+
+.div2::-webkit-scrollbar{
+    width: 5px;
+}
+.div2::-webkit-scrollbar-track {
+        margin-top:70px;
+        margin-bottom: 30px;
+}
+.div2::-webkit-scrollbar-thumb{
+    /* display: none; */
+    background: #a0a0a0;
+    border-radius: 10px;
+}
