--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 body {
     background: white !important;
 }
 
 .parent {
     padding: 5em;
+}
+
+.header{
+    background: radial-gradient(farthest-corner at 92% 89%, #ff0000ff 0%, #350de7ff 100%), linear-gradient(to right in xyz-d65, #ffbf00ff 0%, #0066ffff 100%), 60% 44% / 150rem 100rem repeat repeating-conic-gradient(from 0deg at 30% 5%, #c5b2a6ff 0%, #daffd1ff 100%);background-blend-mode: soft-light;
+    color: #2e2e2eda;
+    font-family: "Ubuntu", serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 3.5em;
+    padding: 30px;
+}
+
+.bento {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-auto-rows: auto;
@@ -11,8 +26,8 @@ body {
     grid-row-gap: 16px;
 }
     
-.div1 { min-height: 15em; max-height: 23em; background: rgba(245, 245, 245, 0.421);grid-area: 1 / 1 / 4 / 4; }
-.div2 { min-height: 15em; max-height: 23em; background: whitesmoke;grid-area: 1 / 4 / 4 / 6; }
+.div1 { min-height: 15em; max-height: 23em; grid-area: 1 / 1 / 4 / 4; }
+.div2 { min-height: 15em; max-height: 23em; background: whitesmoke; grid-area: 1 / 4 / 4 / 6; }
 .div3 { min-height: 15em; max-height: 20em; grid-area: 4 / 3 / 6 / 6; }
 .div4 { min-height: 15em; max-height: 20em; grid-area: 4 / 1 / 6 / 3; }
 
